# maestro-app

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEIAME.md  README.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.ai/handoffs/: 2026-04-26-path-reload-and-security-release.md  2026-04-26-v0.2.1-cloudflare-token-and-cross-review-reload.md
.github/: CODEOWNERS  FUNDING.yml  FUNDING.yml.example  dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  format-public.yml  pages.yml  release.yml  scorecard.yml
docs/: abnt-citation-engine.md  ai-provider-credentials.md  architecture-plan-v0.1.md  cli-agent-audit.md  cloudflare-credentials.md  code-split-plan.md  configuration-persistence.md  dependabot-alert-triage.md  editorial-session-workflow.md  import-export-cloudflare.md  link-integrity-engine.md  logging.md  mainsite-compatibility-contract.md  release-engineering-plan.md  runtime-bootstrapper.md  text-editor-decision.md  web-evidence-engine.md
docs/source-protocols/: README.md
site/: index.html
src/: App.tsx  constants.ts  diagnostics.ts  helpers.tsx  index.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  clippy.toml  osv-scanner.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_probes.rs  api_payloads.rs  app_init.rs  app_paths.rs  cli_adapter.rs  cloudflare.rs  cloudflare_commands.rs  command_path.rs  command_spawn.rs  config_persistence.rs  editorial_agent_runners.rs  editorial_helpers.rs  editorial_inputs.rs  editorial_io.rs  editorial_prompts.rs  human_logs.rs  lib.rs  link_audit.rs  logging.rs  main.rs  provider_config.rs  provider_deepseek.rs  provider_grok.rs  provider_perplexity.rs  provider_retry.rs  provider_routing.rs  provider_runners.rs  sanitize.rs  session_artifacts.rs  session_cancel.rs  session_commands.rs  session_controls.rs  session_evidence.rs  session_minutes.rs  session_orchestration.rs  session_persistence.rs  session_resume.rs  tauri_commands.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/editor/posteditor/: PostEditor.tsx  README.md
src/editor/posteditor/editor/: BubbleMenu.tsx  FloatingMenu.tsx  NodeViews.tsx  PromptModal.tsx  SearchReplace.tsx  SlashCommands.ts  extensions.ts  markdownImport.test.ts  markdownImport.ts  promptModalState.ts  searchReplaceCore.ts  utils.ts
src/hooks/: useEscapeKey.ts
