[package]
name = "maestro-editorial-ai"
version = "0.5.28"
description = "Portable Windows editorial workbench for protocol-driven AI drafting."
authors = ["LCV"]
edition = "2021"

[lib]
name = "maestro_editorial_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tauri = { version = "2.11.1", default-features = false, features = ["common-controls-v6", "dynamic-acl", "wry"] }
tokio = { version = "1", default-features = false, features = ["macros", "time", "sync", "rt"] }
tokio-util = { version = "0.7", default-features = false }
